--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -34,12 +34,13 @@ body::before {
 }
 
 .login_body {
-  padding: 60px;
+  padding: 68px;
   z-index: 90;
   position: relative;
-  max-width: 450px;
-  height: 550px;
+  width: 450px;
+  height: 653px;
   margin-left: 50%;
+  margin-right: 50%;
   background-color: rgb(0, 0, 0, 0.75);
   border-radius: 10px;
   box-sizing: border-box;
@@ -50,38 +51,52 @@ body::before {
   color: #ffff;
   margin-top: 0;
 }
+.login_body p{
+  color: #989696;
+  text-align: center;
+}
 .login_body input {
-  height: 50px;
-  width: 100%;
+  font-size: 15px;
+  height: 24px;
+  width: 282px;
   color: #ffff;
-  background-color: #333;
-  border: none;
+  background-color: #131313;
+  border: 1px solid #939191;
   border-radius: 5px;
-  padding-left: 15px;
-  box-sizing: border-box;
+  padding: 24px 16px 8px;
   outline: none;
 }
+
 .login_body input:hover {
   background-color: #444;
 }
 .input_box {
-  margin-bottom: 25px;
+  margin-bottom: 29px;
 }
 .login_body button {
-  height: 50px;
-  width: 100%;
+  height: 40px;
+  width: 314px;
+  padding: 6px 16px;
   color: #ffff;
   background-color: #e50914;
-  border-radius: 3px;
+  border-radius: 5px;
   font-weight: bold;
   font-size: 16px;
   border: none;
-  margin-bottom: 10px;
+
 }
 .login_body button:hover {
   background-color: #fc1722;
   cursor: pointer;
 }
+
+.access_code button{
+  background-color: #353434;
+}
+.access_code button:hover{
+  background-color: #252527;
+}
+
 .support {
   display: flex;
   color: #b3b3b3;
